--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "gen:api:clean": "yarn gen:api && rm -rf src/openapi/apis && sed -i.bak '1q' src/openapi/index.ts && rm src/openapi/index.ts.bak"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.4",
+    "@biomejs/biome": "1.7.3",
     "@codemirror/lang-json": "6.0.1",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
@@ -152,5 +152,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
