--- a/.github/workflows/build_frontend_prs.yml
+++ b/.github/workflows/build_frontend_prs.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn run lint:material:icons
-      - run: yarn --frozen-lockfile
+      - run: yarn --immutable
       - run: yarn run lint:check
       - run: yarn run test
       - run: yarn run ts:check # TODO: optimize
