--- a/website/package.json
+++ b/website/package.json
@@ -70,5 +70,6 @@
     "react-router": "6.22.3",
     "replace-in-file": "7.1.0",
     "typescript": "4.8.4"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
