--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "testTimeout": 10000,
     "globalSetup": "./scripts/jest-setup.js",
     "transform": {
-      "^.+\\.tsx?$": ["@swc/jest"]
+      "^.+\\.tsx?$": [
+        "@swc/jest"
+      ]
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testPathIgnorePatterns": [
@@ -88,7 +90,13 @@
       "/frontend/",
       "/website/"
     ],
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/dist/",
@@ -162,7 +170,7 @@
   "devDependencies": {
     "@apidevtools/swagger-parser": "10.1.0",
     "@babel/core": "7.24.5",
-    "@biomejs/biome": "1.6.4",
+    "@biomejs/biome": "1.7.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "0.2.36",
     "@types/bcryptjs": "2.4.6",
@@ -223,9 +231,15 @@
     "tough-cookie": "4.1.4"
   },
   "lint-staged": {
-    "*.{js,ts}": ["biome check --apply --no-errors-on-unmatched"],
-    "*.{jsx,tsx}": ["biome check --apply --no-errors-on-unmatched"],
-    "*.json": ["biome format --write --no-errors-on-unmatched"]
+    "*.{js,ts}": [
+      "biome check --apply --no-errors-on-unmatched"
+    ],
+    "*.{jsx,tsx}": [
+      "biome check --apply --no-errors-on-unmatched"
+    ],
+    "*.json": [
+      "biome format --write --no-errors-on-unmatched"
+    ]
   },
   "packageManager": "yarn@4.2.2"
 }
